--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,7 +40,7 @@
 	</aside>
 	<section class="section-map">
 		<header class="map-header">
-			<h1>Preview</h1>
+			<h1>Preview_</h1>
 		</header>
 		<div class="map-container" id="map-container">
 			<canvas id="canvas-map" width="1000" height="667">HTML Canvas not supported in this browser. Please contact us.</canvas>
