--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,15 +31,15 @@
 					</label>
 					<section class="option-section" >
 						<div class="option-input">
-							<input type="text" name="map-title" id="map-title-1" minlength="1" maxlength="16" placeholder="">
+							<input class="form-text-single" type="text" name="map-title" id="map-title-1" minlength="1" maxlength="16" placeholder="">
 							<label for="map-title-1" class="option-label">Title Line One</label>
 						</div>
 						<div class="option-input">
-							<input type="text" name="map-title" id="map-title-2" minlength="1" maxlength="16" placeholder="">
+							<input class="form-text-single" type="text" name="map-title" id="map-title-2" minlength="1" maxlength="16" placeholder="">
 							<label for="map-title-2" class="option-label">Title Line Two</label>
 						</div>
 						<div class="option-input">
-							<input type="text" name="map-title" id="map-title-3" minlength="1" maxlength="16" placeholder="">
+							<input class="form-text-single" type="text" name="map-title" id="map-title-3" minlength="1" maxlength="16" placeholder="">
 							<label for="map-title-3" class="option-label">Title Line Three</label>
 						</div>
 					</section>
@@ -59,15 +59,15 @@
 								<label for="map-compass-custom" class="radio-label">Custom</label>
 							<section class="option-section-compass" >
 								<div class="option-input">
-									<input type="text" name="compass-text" id="compass-text-inner" minlength="1" maxlength="16" placeholder="">
+									<input class="form-text-single" type="text" name="compass-text" id="compass-text-inner" minlength="1" maxlength="16" placeholder="">
 									<label for="compass-text-inner" class="option-label">Inner Text</label>
 								</div>
 								<div class="option-input">
-									<input type="text" name="compass-text" id="compass-text-top" minlength="1" maxlength="16" placeholder="">
+									<input class="form-text-single" type="text" name="compass-text" id="compass-text-top" minlength="1" maxlength="16" placeholder="">
 									<label for="mcompass-text-top" class="option-label">Top Text</label>
 								</div>
 								<div class="option-input">
-									<input type="text" name="compass-text" id="compass-text-bottom" minlength="1" maxlength="16" placeholder="">
+									<input class="form-text-single" type="text" name="compass-text" id="compass-text-bottom" minlength="1" maxlength="16" placeholder="">
 									<label for="compass-text-bottom" class="option-label">Bottom Text</label>
 								</div>
 							</section>
